# fsspec-1password

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
fsspec_1password/: __init__.py  _cli.py  _core.py  core.py
fsspec_1password_tests/: test_core.py
